relinked css and imgaes

--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="home.css">
+    <link rel="stylesheet" type="text/css" href="css/home.css">
     <title>Wordly | Home</title>
 	</head>
 
@@ -57,16 +57,16 @@
       <div class="branch-1">
           <!-- the text and image will be wrapped in an a tag when those pages are created  -->
           <h4 class="title"> Currently Reading</h4>
-          <img src="branch1.png" width="100%"/>
+          <img src="assets/branch1.png" width="100%"/>
           <!-- the text and image will be wrapped in an a tag when those pages are created  -->
         </div>
         <div class="branch-2">
             <h4 class="title"> Finished Reading</h4>
-            <img src="branch2.png" width="100% "/>
+            <img src="assets/branch2.png" width="100% "/>
           </div>
           <div class="branch-3">
               <h4 class="title"> My Wishlist</h4>
-              <img src="branch3.png" width="100% "/>
+              <img src="assets/branch3.png" width="100% "/>
             </div>
           </div>
         <!-- branches -->
@@ -74,7 +74,7 @@
             <div class="col">
      <!-- Buddy -->
           <div class="buddy">
-              <img src="sample-buddy.png" width="100%"/>
+              <img src="assets/sample-buddy.png" width="100%"/>
           </div>
       <!-- Buddy -->
             </div>
