fixed all bugs except the sign up btn

--- a/login.html
+++ b/login.html
@@ -96,10 +96,10 @@
                     <button class="btn btn-secondary btn-block previous-2 mt-4" name="previous">Previous</button> -->
                     <div class="row">
                         <div class="col">
-                        <button class="btn btn-primary btn-block previous-2 mt-4">Previous</button>
+                        <button class="btn btn-primary btn-block mt-4" id="previous-2">Previous</button>
                         </div>
                         <div class="col">
-                        <button class="btn btn-primary btn-block mt-4" id="signup-submit">Next</button>
+                        <button class="btn btn-primary btn-block mt-4" id="signup-submit">Finish</button>
                         </div>
                     </div>
             </fieldset> 
