--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <header>
         <div class="page-header bg-primary text-center pt-4">
             <!-- <img src="assets/bg-texture-light.png" class="img-fluid bg-top" alt="background texture"> -->
-            <h3>WELCOME TO</h3>
+            <h3>welcome to</h3>
             <a href="login.html"><img src="assets/logo-light.png" class="logo" alt="Wordly logo"></a>
         </div>
     </header>
