added new branches in

--- a/home.html
+++ b/home.html
@@ -56,17 +56,17 @@
        <div class="branches">
       <div class="branch-1">
           <!-- the text and image will be wrapped in an a tag when those pages are created  -->
-          <h4 class="title"> Currently Reading</h4>
-          <img src="assets/branch1.png" width="100%"/>
+
+          <img src="assets/bluebranch.png" width="100%"/>
           <!-- the text and image will be wrapped in an a tag when those pages are created  -->
         </div>
         <div class="branch-2">
-            <h4 class="title"> Finished Reading</h4>
-            <img src="assets/branch2.png" width="100% "/>
+
+            <img src="assets/pinkbranch.png" width="100% "/>
           </div>
           <div class="branch-3">
-              <h4 class="title"> My Wishlist</h4>
-              <img src="assets/branch3.png" width="100% "/>
+              
+              <img src="assets/greenbranch.png" width="100% "/>
             </div>
           </div>
         <!-- branches -->
