--- a/home.html
+++ b/home.html
@@ -49,7 +49,10 @@
 
     <main>
 
+
+
       <div class="container">
+
           <div class="row">
             <div class="col">
              <!-- branches -->
@@ -65,7 +68,7 @@
             <img src="assets/pinkbranch.png" width="100% "/>
           </div>
           <div class="branch-3">
-              
+
               <img src="assets/greenbranch.png" width="100% "/>
             </div>
           </div>
@@ -82,6 +85,9 @@
 
           <!-- <div>
           <img class="land" src="assets/land.png"  /></div> -->
+          <!-- footer -->
+          
+          <!-- footer -->
 
     </main>
     <!-- JavaScript -->
