--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
           <!-- <div>
           <img class="land" src="assets/land.png"  /></div> -->
           <!-- footer -->
-          
+          <img src="assets/land.png" width="150%"/>
           <!-- footer -->
 
     </main>
