--- a/bookrecord.html
+++ b/bookrecord.html
@@ -10,18 +10,37 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
-    <title>Wordly</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <title>Wordly | {{title}}</title>
   </head>
   <body>
-    <nav class="navbar sticky-top navbar-light bg-light">
-    	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-  		<form class="form-inline">
-    		<input class="form-control mr-sm-2" type="search" placeholder="Search by title, author, or subject" aria-label="Search">
-    		<button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
-  		</form>
-	</nav>
+    <header>
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <a class="navbar-brand" href="#">Wordly</a>
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Settings</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="profile.html" tabindex="-1">My Profile <span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+            </div>
+            <!-- search content -->
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search for Books" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </nav>
+    </header>
 	<div class="container py-4">
 	   <div class="row">
 	   		<div class="col">
