--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
                           <a class="nav-link" href="#">Settings</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#" tabindex="-1">My Profile</a>
+                          <a class="nav-link" href="profile.html" tabindex="-1">My Profile</a>
                         </li>
                       </ul>
                       <!-- <form class="form-inline my-2 my-lg-0">
