--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
                         <input class="form-control mr-sm-2" type="search" placeholder="Search for Books" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                       </form>
-                    </div>
+              </nav>
 
 
     </header>
