added alert to top

--- a/home.html
+++ b/home.html
@@ -46,10 +46,18 @@
 
     <main>
 
-
-
-      <div class="container">
-
+    <div class="container">
+      <div class="col-12 mt-4">
+      <div class="alert alert-info alert-dismissible wordly-alert" role="alert">
+      <h4 class="alert-heading">Welcome to Wordly!</h4>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      <hr>
+      <p>Updates on new Wordly features, and other reminders will go here
+      <strong>Let's get reading!</strong></p>
+    </div>
+    </div>
           <div class="row">
             <div class="col">
              <!-- branches -->
@@ -57,16 +65,13 @@
       <div class="branch-1">
           <!-- the text and image will be wrapped in an a tag when those pages are created  -->
 
-          <img src="assets/bluebranch.png" width="100%"/>
-          <!-- the text and image will be wrapped in an a tag when those pages are created  -->
+          <a href="#" role="button"><img src="assets/bluebranch.png" width="100%"/></a>
         </div>
         <div class="branch-2">
-
-            <img src="assets/pinkbranch.png" width="100% "/>
-          </div>
+            <a href="#" role="button"><img src="assets/pinkbranch.png" width="100% "/></a>
+        </div>
           <div class="branch-3">
-
-              <img src="assets/greenbranch.png" width="100% "/>
+            <a href="#" role="button"><img src="assets/greenbranch.png" width="100% "/></a>
             </div>
           </div>
         <!-- branches -->
@@ -74,7 +79,7 @@
             <div class="col">
      <!-- Buddy -->
           <div class="buddy">
-              <img src="assets/sample-buddy.png" width="100%"/>
+              <img src="assets/buddy6.png" width="100%"/>
           </div>
       <!-- Buddy -->
             </div>
