--- a/login.html
+++ b/login.html
@@ -7,16 +7,17 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Wordly | Log In</title>
 	</head>
 	<body>
     
     <header>
-        <div class="page-header bg-primary text-center pt-4">
+        <div class="page-header text-center pt-4">
             <!-- <img src="assets/bg-texture-light.png" class="img-fluid bg-top" alt="background texture"> -->
             <h3>welcome to</h3>
-            <a href="login.html"><img src="assets/logo-light.png" class="logo" alt="Wordly logo"></a>
+            <a href="login.html"><img src="assets/logo-blue.png" class="logo" alt="Wordly logo"></a>
         </div>
     </header>
     <main>
