want to read page ready for data

--- a/wanttoread.html
+++ b/wanttoread.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
         <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -65,25 +65,25 @@
             <div class="row py-4">
                 
             <!-- php while loop to get records a create each one in a column -->
-                <div class="col-6 col-md-3"> 
+                <div class="col-6 col-md-4 col-lg-3 my-2"> 
                     <a href="#"><img href="#" src=assets/placeholder-cover.jpg class="img-fluid"></a>
-                    <h6>Interview with the Vampire</h6>
-                    <h3 class="text-center"><a href="#" class="badge badge-info" data-toggle="modal" data-target="#addToBranch">+</a></h3>   
+                    <a href="#"><h4 class="mt-2">Interview with the Vampire</h4></a>
+                    <h6>author name</h6>  
                 </div>
-                <div class="col-6 col-md-3"> 
+                <div class="col-6 col-md-4 col-lg-3 my-2"> 
                     <a href="#"><img href="#" src=assets/placeholder-cover.jpg class="img-fluid"></a>  
-                    <h6>One Fish Two Fish Red Fish Blue Fish</h6>
-                    <h3 class="text-center"><a href="#" class="badge badge-info" data-toggle="modal" data-target="#addToBranch">+</a></h3>
+                    <a href="#"><h4 class="mt-2">One Fish Two Fish Red Fish Blue Fish</h4></a>
+                    <h6>author name</h6>
                 </div>
-                <div class="col-6 col-md-3"> 
+                <div class="col-6 col-md-4 col-lg-3 my-2"> 
                     <a href="#"><img href="#" src=assets/placeholder-cover.jpg class="img-fluid"></a>
-                    <h6>The Golden Compass</h6>
-                    <h3 class="text-center"><a href="#" class="badge badge-info" data-toggle="modal" data-target="#addToBranch">+</a></h3>
+                    <a href="#"><h4 class="mt-2">The Golden Compass</h4></a>
+                    <h6>author name</h6>
                 </div>
-                <div class="col-6 col-md-3"> 
+                <div class="col-6 col-md-4 col-lg-3 my-2"> 
                     <a href="#"><img href="#" src=assets/placeholder-cover.jpg class="img-fluid"></a>
-                    <h6>Perloo the Bold</h6>
-                    <h3 class="text-center"><a href="#" class="badge badge-info" data-toggle="modal" data-target="#addToBranch">+</a></h3> 
+                    <a href="#"><h4 class="mt-2">Perloo the Bold</h4></a>
+                    <h6>author name</h6>
                 </div>
             </div>
                 <!-- php while loop to get records  -->
