--- a/currentlyreading.html
+++ b/currentlyreading.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
         <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,6 +38,7 @@
     <main>
         <div class="container py-4">
             <h1>Currently reading</h1>
+            <h3>Did you take some time to read today?</h3>
             <!-- if only one book display like this -->
             <div class="row py-4">
             <div class="col">
@@ -70,24 +71,33 @@
             <!-- if more than one book is in this brank use a  loop to get records a create each one in a column -->
             <div class="row">
             <!-- php while loop to get records a create each one in a column like this-->
-                <div class="col-6 col-md-3"> 
+                <div class="col-6 col-md-4 col-lg-3"> 
                     <a href="#"><img href="#" src=assets/placeholder-cover.jpg class="img-fluid"></a>
-                    <h6>Interview with the Vampire</h6>
-                    <h5>50% done this book!</h5>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"  aria-valuemax="100"></div>
+                    <h4>Interview with the Vampire</h4>
+                    <h6>author name</h6>
+                    <div class="mt-2">
+                        <h5>50% done this book!</h5>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"  aria-valuemax="100">
+                            </div>
+                        </div>
+                        <h6 class="mt-2"><a href="#" class="badge badge-info" data-toggle="modal" data-target="#logPages">+</a>&nbsp; Log Pages</h6>  
                     </div>
-                    <h6><a href="#" class="badge badge-info" data-toggle="modal" data-target="#logPages">+</a>&nbsp; Log Pages</h6>  
                 </div>
-                <div class="col-6 col-md-3"> 
+                <div class="col-6 col-md-4 col-lg-3"> 
                     <a href="#"><img href="#" src=assets/placeholder-cover.jpg class="img-fluid"></a>  
-                    <h6>One Fish Two Fish Red Fish Blue</h6>
-                    <h5>85% done this book!</h5>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"  aria-valuemax="100"></div>
+                    <h4>One Fish Two Fish Red Fish Blue</h4>
+                    <h6>author name</h6>
+                    
+                    <div class="mt-2">
+                        <h5>85% done this book!</h5>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"  aria-valuemax="100">
+                            </div>
+                        </div >
+                        <h6 class="mt-2"><a href="#" class="badge badge-info" data-toggle="modal" data-target="#logPages">+</a>&nbsp; Log Pages</h6>
                     </div>
-                    <h6><a href="#" class="badge badge-info" data-toggle="modal" data-target="#logPages">+</a>&nbsp; Log Pages</h6>
-                </div>
+                </div><!-- end of col -->
                 
         </div> <!-- end of container -->
         </main>
