--- a/browse.html
+++ b/browse.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
         <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -60,6 +60,7 @@
         <main>
         <div class="container py-4">
             <h1>Browse Books</h1>
+            <h3>Find a new book to add to your currently reading branch!</h3>
             <h2>Featured this month</h2>
             <div class="row py-4">
             <div class="col">
@@ -90,23 +91,23 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2 col-4">
-                    <h3><a href="#" class="badge badge-pill badge-info">Fantasy</a></h3>
+                <div class="col">
+                    <h3><a href="#" class="badge badge-info">Fantasy</a></h3>
                 </div>
-                <div class="col-md-2 col-4">
-                    <h3><a href="#" class="badge badge-pill badge-info">Fantasy</a></h3>
+                <div class="col">
+                    <h3><a href="#" class="badge badge-info">Mystery</a></h3>
                 </div>
-                <div class="col-md-2 col-4">
-                    <h3><a href="#" class="badge badge-pill badge-info">Fantasy</a></h3>
+                <div class="col">
+                    <h3><a href="#" class="badge badge-info">Sci-Fi</a></h3>
                 </div>
-                <div class="col-md-2 col-4">
-                    <h3><a href="#" class="badge badge-pill badge-info">Fantasy</a></h3>
+                <div class="col">
+                    <h3><a href="#" class="badge badge-info">Classic</a></h3>
                 </div>
-                <div class="col-md-2 col-4">
-                    <h3><a href="#" class="badge badge-pill badge-info">Fantasy</a></h3>
+                <div class="col">
+                    <h3><a href="#" class="badge badge-info">Adventure</a></h3>
                 </div>
-                <div class="col-md-2 col-4">
-                    <h3><a href="#" class="badge badge-pill badge-info">Fantasy</a></h3>
+                <div class="col">
+                    <h3><a href="#" class="badge badge-info">Comic</a></h3>
                 </div>
             </div>
             <div class="row py-4">
@@ -116,25 +117,29 @@
             </div>
             <div class="row">
             <!-- php while loop to get records a create each one in a column -->
-                <div class="col-6 col-md-3"> 
+                <div class="col-6 col-md-4 col-lg-3"> 
                     <a href="#"><img href="#" src=assets/placeholder-cover.jpg class="img-fluid"></a>
-                    <h6>Interview with the Vampire</h6>
-                    <h3 class="text-center"><a href="#" class="badge badge-info" data-toggle="modal" data-target="#addToBranch">+</a></h3>   
+                    <h4>Interview with the Vampire</h4>
+                    <h6>author name</h6>
+                    <button type="button" class="btn btn-primary btn-block mt-4" data-toggle="modal" data-target="#addToBranch"><i class="fas fa-plus"></i> Add to a Branch</button>  
                 </div>
-                <div class="col-6 col-md-3"> 
+                <div class="col-6 col-md-4 col-lg-3"> 
                     <a href="#"><img href="#" src=assets/placeholder-cover.jpg class="img-fluid"></a>  
-                    <h6>One Fish Two Fish Red Fish Blue Fish</h6>
-                    <h3 class="text-center"><a href="#" class="badge badge-info" data-toggle="modal" data-target="#addToBranch">+</a></h3>
+                    <h4>One Fish Two Fish Red Fish Blue Fish</h4>
+                    <h6>author name</h6>
+                    <button type="button" class="btn btn-primary btn-block mt-4" data-toggle="modal" data-target="#addToBranch"><i class="fas fa-plus"></i> Add to a Branch</button>
                 </div>
-                <div class="col-6 col-md-3"> 
+                <div class="col-6 col-md-4 col-lg-3"> 
                     <a href="#"><img href="#" src=assets/placeholder-cover.jpg class="img-fluid"></a>
-                    <h6>The Golden Compass</h6>
-                    <h3 class="text-center"><a href="#" class="badge badge-info" data-toggle="modal" data-target="#addToBranch">+</a></h3>
+                    <h4>The Golden Compass</h4>
+                    <h6>author name</h6>
+                    <button type="button" class="btn btn-primary btn-block mt-4" data-toggle="modal" data-target="#addToBranch"><i class="fas fa-plus"></i> Add to a Branch</button>
                 </div>
-                <div class="col-6 col-md-3"> 
+                <div class="col-6 col-md-4 col-lg-3"> 
                     <a href="#"><img href="#" src=assets/placeholder-cover.jpg class="img-fluid"></a>
-                    <h6>Perloo the Bold</h6>
-                    <h3 class="text-center"><a href="#" class="badge badge-info" data-toggle="modal" data-target="#addToBranch">+</a></h3> 
+                    <h4>Perloo the Bold</h4>
+                    <h6>author name</h6>
+                    <button type="button" class="btn btn-primary btn-block mt-4" data-toggle="modal" data-target="#addToBranch"><i class="fas fa-plus"></i> Add to a Branch</button> 
                 </div>
             </div>
                 <!-- php while loop to get records  -->
